scripts/devops-demo-profesional-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-profesional-ingress
spec:
  rules:
  - host: devops.devs
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: devops-demo-service
            port:
              number: 8000
